Retry to fix table on safari

--- a/styles/Live.module.css
+++ b/styles/Live.module.css
@@ -43,6 +43,7 @@
 }
 
 .live-table {
+  position: relative;
   display: flex;
   flex-flow: column;
   height: 100%;
